--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "dotenv": "^17.2.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.553.0",
-    "next": "16.0.1",
+    "next": "^16.1.1",
     "openai": "^6.8.1",
     "prisma": "^6.19.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
